--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 
 # dependencies
 node_modules
+# Keep environment variables out of version control
+.env
+
+*/src/generated/prisma
+
+.vscode
+node_modules
 dist
 .next
 /.pnp
