fix(server, frontend): deployment

--- a/backend-chatbot/tsconfig.json
+++ b/backend-chatbot/tsconfig.json
@@ -1,40 +1,19 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
     "target": "ES2023",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
-    // For nodejs:
     "lib": [
       "esnext"
     ],
-    "types": [
-      "node"
-    ],
-    // and npm install -D @types/node
-    // Other Outputs
     "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    // Stricter Typechecking Options
+    "declaration": false,
+    "declarationMap": false,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-    // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": false,
@@ -48,7 +27,6 @@
   ],
   "exclude": [
     "node_modules",
-    "dist",
-    "prisma.config.ts"
+    "dist"
   ]
 }
