--- a/backend-chatbot/package.json
+++ b/backend-chatbot/package.json
@@ -10,8 +10,11 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:migrate:deploy": "npx prisma migrate deploy",
+    "postinstall": "npx prisma generate",
+    "build:deploy": "npm run build && npm run prisma:migrate:deploy",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -35,6 +38,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
+    "pm2": "^6.0.14",
     "socket.io": "^4.8.1"
   }
 }
