--- a/backend-chatbot/package.json
+++ b/backend-chatbot/package.json
@@ -14,6 +14,7 @@
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:migrate:deploy": "npx prisma migrate deploy",
     "postinstall": "npx prisma generate",
+    "postbuild": "copyfiles -u 1 src/config/** dist/config",
     "build:deploy": "npm run build && npm run prisma:migrate:deploy",
     "start": "node dist/server.js"
   },
@@ -26,6 +27,7 @@
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
+    "copyfiles": "^2.4.1",
     "prisma": "^7.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
