--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules
 # Keep environment variables out of version control
 .env
 
-*/src/generated/prisma
+generated
 
 .vscode
 node_modules
