--- a/backend-chatbot/package.json
+++ b/backend-chatbot/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
-  "type": "module",
   "prisma": {
     "schema": "./src/prisma/schema.prisma"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate dev --name init",
+    "build": "tsc -p .",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
     "prisma:migrate:deploy": "npx prisma migrate deploy",
-    "postinstall": "npx prisma generate",
-    "postbuild": "copyfiles -u 1 src/config/** dist/config",
-    "build:deploy": "npm run build && npm run prisma:migrate:deploy",
+    "postinstall": "prisma generate",
+    "build:deploy": "npm run prisma:generate && npm run build && npm run prisma:migrate:deploy",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -27,15 +25,15 @@
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
+    "add-js-extension": "^1.0.4",
     "copyfiles": "^2.4.1",
-    "prisma": "^7.0.1",
+    "prisma": "6.7.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "6.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
